// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components | Tab when content is react element renders content 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": 100,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 100,
          "justifyContent": "center",
          "paddingLeft": 12,
          "paddingRight": 12,
        },
      ]
    }
    tabHeight={100}
  >
    <Text
      style={
        Array [
          undefined,
          Object {
            "color": "green",
          },
        ]
      }
    >
      hi
    </Text>
  </View>
</View>
`;

exports[`Components | Tab when content is string renders text tab 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": 100,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 100,
          "justifyContent": "center",
          "paddingLeft": 12,
          "paddingRight": 12,
        },
      ]
    }
    tabHeight={100}
  >
    <Text
      allowFontScaling={true}
      color="green"
      style={
        Array [
          Object {
            "color": "green",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "minWidth": "100%",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      TEXT
    </Text>
  </View>
</View>
`;
